# CLi-chat-client-for-minecraft-server

./: Cargo.toml  README.md
src/: main.rs  text_formatting.rs
